# first_c_project

./: .clang-format  CMakeLists.txt  contact.c  contact.h  main.c  string.c  string.h  user.c  user.h
stringlib/include/: stringlib.h
stringlib/internal/: string_internal.c  string_internal.h
stringlib/src/: string_info.c  string_lifecycle.c  string_manipulation.c
stryx/include/: stryx.h
stryx/internal/: _string_internal.h  string_internal.c
stryx/src/: string_extraction.c  string_info.c  string_lifecycle.c  string_manipulation.c
